# tecleando

./: README.md
arduino/cositas/ardu.ino/: ardu.ino
arduino/cositas/instrucciones.txt/: instrucciones.txt.ino
arduino/cositas/leds_programables/: leds_programables.ino
c++/jutge/01-control/: Makefile  control.cc
cpp/aeyd/practicas/01-racional/: main_rational_t  main_rational_t.cpp  rational_t.cpp  rational_t.hpp
cpp/aeyd/practicas/02-vectors/: main_p2.cpp  matrix_t.hpp  rational_t.cpp  rational_t.hpp  vector_t.hpp
cpp/aeyd/practicas/03-sparse_vectors/: main_polynomial  main_polynomial.cc  pair_t.h  polynomial.h  sparse_vector_t.h
cpp/aeyd/practicas/04-sll/: main_sllpolynomial  main_sllpolynomial.cc  sll_node_t.h  sll_t.h  sllpolynomial.h
cpp/aeyd/practicas/05-rpn/: dll_node_t.h  dll_t.h  log.txt  main_rpn_t  main_rpn_t.cc  queue_l_t.h  rpn_t.h  stack_l_t.h
cpp/aeyd/practicas/06-maze/: data_maze_mod.txt  main_maze_t  main_maze_t.cpp  maze_t.cpp  maze_t.hpp  sll_node_t.h
cpp/aeyd/problemas/: recursividad.cc
cpp/aeyd/problemas/bitset/: bitset.cpp
cpp/aeyd/problemas/bitset-pro/: bitset_t.cpp  bitset_t.hpp  main_bitset_t  main_bitset_t.cpp  super_bitset_t.cpp  super_bitset_t.hpp  vector_t.h
cpp/aeyd/problemas/in-situ/: a.out  diagonal_superior.cc
cpp/aeyd/problemas/recursividad/: recursividad.cc  vector_t.h
cpp/aeyd/problemas/tema-2/: data.txt  main.cc  main.out  matrix_t.hpp  rational_t.cpp  vector_t.h
cpp/aeyd/pruebas/02-matrix/: diagonal.cc
cpp/exercism/03-rstring/: reverse_string.cpp  reverse_string.h
cpp/ib-speedrun/02-introduction/: 01-pair.cpp  02-radius.cpp  03-inches  03-inches.cpp  04-pythagoras.cpp  05-average.cpp  06-digits.cpp  08-hour.cpp  09-pow.cpp  dudas.txt
cpp/ib-speedrun/03-functions/F1-WordCount/: Makefile  mywc.cc  mywc.h  mywc_main.cc
cpp/ib-speedrun/03-functions/F2-Find/: Makefile  find.cc  find.h  find_main.cc
cpp/ib-speedrun/03-functions/F4-DeleteBlankLines/: Makefile  delete.cc  delete.h  delete_main.cc
cpp/ib-speedrun/03-functions/F5-ToNumber/: Makefile  to_number.cc  to_number.h  to_number_main.cc
cpp/ib-speedrun/03-functions/F6-SourcePrint/: Makefile  source_print.cc  source_print.h  source_print_main.cc
cpp/ib-speedrun/03-functions/S1-CountVowels/: Makefile  count_vowels.cc  count_vowels.h  count_vowels_main.cc
cpp/ib-speedrun/03-functions/S2-SwitchCase/: Makefile  switch_case.cc  switch_case.h  switch_case_main.cc
cpp/ib-speedrun/03-functions/S4-Find/: Makefile  (+3 more)
cpp/ib/hoja-3/fibonnaci_sum/: CMakeLists.txt  Makefile
cpp/ib/hoja-3/fibonnaci_sum/src/: fibonacci_sum.cc  fibonacci_sum.h  fibonacci_sum_main.cc
cpp/jutge/01-control/: control
cpp/opti/01-grafos/: ciclo.txt  ciclo2.txt  datos.txt  grafo.cpp  grafo.h  grafo.txt  kruskal.txt  main.cpp  main.out  mod2.txt
cpp/opti/02-grafos-optimized/: grafo.cpp  grafo.h  kruskal.txt  kruskal2.txt  main.cpp  main.out  mod1.txt  mod3.txt  mod4.txt
cpp/random/array_manipulation/: array_compare.cc  array_copy.cc  substring_array.cc
cpp/random/books/: CMakeLists.txt  books.cc  books.h  books_main.cc
cpp/random/switch_case/: CMakeLists.txt
cpp/random/switch_case/src/: switch_case.cc
python/adventofcode2021/day1/: first.py
python/exercism/02-lasagna/: lasagna.py
python/exercism/arcade/: arcade_game.py
python/exercism/meltdown/: conditionals.py
python/stuff/primal-simplex/: PSolver.py  main.py  polynomial.py  rational.py
(+46 files in other folders)
